force-app/main/default/objects/Letting__c/Letting__c.object-meta.xml
<CustomObject>
    <label>Letting</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Letting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lettings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>