force-app/main/default/objects/Letting__c/fields/Accounts__c.field-meta.xml
<CustomField>
    <fullName>Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounts</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lettings</relationshipLabel>
    <relationshipName>Lettings</relationshipName>
    <type>Lookup</type>
</CustomField>