force-app/main/default/objects/Letting__c/fields/Action_Plan_Task__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Plan Task</label>
    <referenceTo>pba__ActionPlanTask__c</referenceTo>
    <relationshipLabel>Lettings</relationshipLabel>
    <relationshipName>Lettings</relationshipName>
    <type>Lookup</type>
</CustomField>