force-app/main/default/objects/Letting__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3rd Party Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lettings (Agent)</relationshipLabel>
    <relationshipName>Lettings3</relationshipName>
    <type>Lookup</type>
</CustomField>