force-app/main/default/objects/Letting__c/fields/Arrears__c.field-meta.xml
<CustomField>
    <fullName>Arrears__c</fullName>
    <label>Arrears  Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>