force-app/main/default/objects/Letting__c/fields/Certificate_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Expiry__c</fullName>
    <formula>IF( Gas_Certificate_No_Gas__c = True, &apos;N/A&apos;, &apos;NO Certificate&apos;)</formula>
    <label>Certificate Expiry</label>
    <type>Text</type>
</CustomField>