force-app/main/default/objects/Letting__c/fields/Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Cleaning__c</fullName>
    <label>Cleaning Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>