force-app/main/default/objects/Letting__c/fields/Damages__c.field-meta.xml
<CustomField>
    <fullName>Damages__c</fullName>
    <label>Damages Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>