force-app/main/default/objects/Letting__c/fields/Deposit_On_Interest__c.field-meta.xml
<CustomField>
    <fullName>Deposit_On_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest (On Deposit )</label>
    <type>Checkbox</type>
</CustomField>