force-app/main/default/objects/Letting__c/fields/Deposit_type__c.field-meta.xml
<CustomField>
    <fullName>Deposit_type__c</fullName>
    <label>Deposit type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weeks Rent</fullName>
            </value>
            <value>
                <fullName>Months Rent</fullName>
            </value>
            <value>
                <fullName>Fixed Sum</fullName>
            </value>
            <value>
                <fullName>Guarantee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>