force-app/main/default/objects/Letting__c/fields/Deposit_Type_Value__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Type_Value__c</fullName>
    <label>Deposit Type Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>