force-app/main/default/objects/Letting__c/fields/Details_Notes__c.field-meta.xml
<CustomField>
    <fullName>Details_Notes__c</fullName>
    <label>Details / Notes</label>
    <type>TextArea</type>
</CustomField>