force-app/main/default/objects/Letting__c/fields/Do_not_chase__c.field-meta.xml
<CustomField>
    <fullName>Do_not_chase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not chase</label>
    <type>Checkbox</type>
</CustomField>