force-app/main/default/objects/Letting__c/fields/Electricity__c.field-meta.xml
<CustomField>
    <fullName>Electricity__c</fullName>
    <label>Electricity Meter Reading</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>