force-app/main/default/objects/Letting__c/fields/Electricity_On__c.field-meta.xml
<CustomField>
    <fullName>Electricity_On__c</fullName>
    <label>Electricity Meter Reading On</label>
    <type>Date</type>
</CustomField>