force-app/main/default/objects/Letting__c/fields/Float_Held__c.field-meta.xml
<CustomField>
    <fullName>Float_Held__c</fullName>
    <label>Float Held Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>