force-app/main/default/objects/Letting__c/fields/FormatedListingAddress__c.field-meta.xml
<CustomField>
    <fullName>FormatedListingAddress__c</fullName>
    <formula>Listing__r.pba__Street_pb__c &amp; &quot;, &quot; &amp; 
BR() &amp; 
Listing__r.pba__City_pb__c &amp; &quot;, &quot; &amp;  
Listing__r.pba__State_pb__c &amp; &quot;, &quot; &amp; 
BR() &amp; 
Listing__r.pba__Country_pb__c &amp; &quot;, &quot; &amp; 
BR() &amp; 
Listing__r.pba__PostalCode_pb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formated Listing Address</label>
    <type>Text</type>
</CustomField>