force-app/main/default/objects/Letting__c/fields/Gas__c.field-meta.xml
<CustomField>
    <fullName>Gas__c</fullName>
    <label>Gas Meter Reading</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>