force-app/main/default/objects/Letting__c/fields/Gas_Certificate_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Gas_Certificate_Expiry__c</fullName>
    <inlineHelpText>Expiry date of the gas certificate.</inlineHelpText>
    <label>Gas Certificate Expiry</label>
    <type>Date</type>
</CustomField>