force-app/main/default/objects/Letting__c/fields/Gas_Certificate_No_Gas__c.field-meta.xml
<CustomField>
    <fullName>Gas_Certificate_No_Gas__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>No Gas</inlineHelpText>
    <label>Gas Certificate ( No Gas )</label>
    <type>Checkbox</type>
</CustomField>