force-app/main/default/objects/Letting__c/fields/Gas_On__c.field-meta.xml
<CustomField>
    <fullName>Gas_On__c</fullName>
    <label>Gas Meter Reading On</label>
    <type>Date</type>
</CustomField>