force-app/main/default/objects/Letting__c/fields/Gas_Safety_Check__c.field-meta.xml
<CustomField>
    <fullName>Gas_Safety_Check__c</fullName>
    <label>Gas Safety Check</label>
    <type>Date</type>
</CustomField>