force-app/main/default/objects/Letting__c/fields/Generate_Pre_Post_Tenancy_Tasks_List__c.field-meta.xml
<CustomField>
    <fullName>Generate_Pre_Post_Tenancy_Tasks_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Pre &amp; Post Tenancy Tasks List</label>
    <type>Checkbox</type>
</CustomField>