force-app/main/default/objects/Letting__c/fields/Held_by__c.field-meta.xml
<CustomField>
    <fullName>Held_by__c</fullName>
    <label>Held by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Us - stakeholder</fullName>
            </value>
            <value>
                <fullName>Us - landlord&apos;s agent</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Deposit Protection Scheme</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>