force-app/main/default/objects/Letting__c/fields/Home__c.field-meta.xml
<CustomField>
    <fullName>Home__c</fullName>
    <label>Home</label>
    <type>Phone</type>
</CustomField>