force-app/main/default/objects/Letting__c/fields/Initial_Currency__c.field-meta.xml
<CustomField>
    <fullName>Initial_Currency__c</fullName>
    <label>Initial Currency Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>