force-app/main/default/objects/Letting__c/fields/Initial_rent__c.field-meta.xml
<CustomField>
    <fullName>Initial_rent__c</fullName>
    <label>Initial rent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>