force-app/main/default/objects/Letting__c/fields/Landlord_Address__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Address__c</fullName>
    <formula>Landlord__r.MailingStreet &amp;&quot;, &quot;&amp;
BR()&amp;
Landlord__r.MailingCity&amp;&quot;, &quot;&amp;
BR()&amp;
Landlord__r.MailingState &amp;&quot;, &quot;&amp; 
BR()&amp;
Landlord__r.MailingCountry &amp;&quot;, &quot;&amp;
BR()&amp;
Landlord__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landlord Address</label>
    <type>Text</type>
</CustomField>