force-app/main/default/objects/Letting__c/fields/Landlord_Last_name__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Last_name__c</fullName>
    <formula>Landlord__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landlord Last name</label>
    <type>Text</type>
</CustomField>