force-app/main/default/objects/Letting__c/fields/Landlord_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Mobile__c</fullName>
    <formula>Landlord__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landlord Mobile</label>
    <type>Text</type>
</CustomField>