force-app/main/default/objects/Letting__c/fields/LandLord_Name__c.field-meta.xml
<CustomField>
    <fullName>LandLord_Name__c</fullName>
    <formula>Landlord__r.FirstName&amp; &quot; &quot; &amp;Landlord__r.LastName</formula>
    <label>LandLord Name</label>
    <type>Text</type>
</CustomField>