force-app/main/default/objects/Letting__c/fields/Landlord_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Salutation__c</fullName>
    <formula>TEXT( Landlord__r.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landlord Salutation</label>
    <type>Text</type>
</CustomField>