force-app/main/default/objects/Letting__c/fields/Landord_Email__c.field-meta.xml
<CustomField>
    <fullName>Landord_Email__c</fullName>
    <formula>Landlord__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landord Email</label>
    <type>Text</type>
</CustomField>