force-app/main/default/objects/Letting__c/fields/Lease_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Lease_Frequency__c</fullName>
    <formula>Text( Offer__r.pba__Listing__r.Property_Valuation__r.Lease_Frequency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Frequency</label>
    <type>Text</type>
</CustomField>