force-app/main/default/objects/Letting__c/fields/Letting_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Letting_Document_Name__c</fullName>
    <formula>Listing_Address__c &amp; &quot; &quot; &amp; &quot;-&quot; &amp; &quot; &quot; &amp;  Landlord__r.FirstName &amp;&quot; &quot;&amp;  Landlord__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letting Document Name</label>
    <type>Text</type>
</CustomField>