force-app/main/default/objects/Letting__c/fields/Listing_Address__c.field-meta.xml
<CustomField>
    <fullName>Listing_Address__c</fullName>
    <formula>If ( ISPICKVAL(Listing__r.Sharing_Rule__c, &apos;United Kingdom SIR&apos;) , Listing__r.Address__c  , Listing__r.pba_uaefields__Propertyfinder_Region__c )</formula>
    <label>Listing Address</label>
    <type>Text</type>
</CustomField>