force-app/main/default/objects/Letting__c/fields/Listing_Broker_ID__c.field-meta.xml
<CustomField>
    <fullName>Listing_Broker_ID__c</fullName>
    <formula>Listing__r.pba__Broker_s_Listing_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Broker ID</label>
    <type>Text</type>
</CustomField>