force-app/main/default/objects/Letting__c/fields/Main_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Main_Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Tenant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lettings (Main Tenant)</relationshipLabel>
    <relationshipName>Lettings2</relationshipName>
    <type>Lookup</type>
</CustomField>