force-app/main/default/objects/Letting__c/fields/Main_Tenant_Email__c.field-meta.xml
<CustomField>
    <fullName>Main_Tenant_Email__c</fullName>
    <formula>Main_Tenant__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Tenant Email</label>
    <type>Text</type>
</CustomField>