force-app/main/default/objects/Letting__c/fields/Main_Tenant_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Main_Tenant_Mobile__c</fullName>
    <formula>Main_Tenant__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Tenant Mobile</label>
    <type>Text</type>
</CustomField>