force-app/main/default/objects/Letting__c/fields/Management_Electronics_correspondence__c.field-meta.xml
<CustomField>
    <fullName>Management_Electronics_correspondence__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Electronics correspondence given</inlineHelpText>
    <label>Management(Electronics correspondence)</label>
    <type>Checkbox</type>
</CustomField>