force-app/main/default/objects/Letting__c/fields/Missing_Items__c.field-meta.xml
<CustomField>
    <fullName>Missing_Items__c</fullName>
    <label>Missing Items Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>