force-app/main/default/objects/Letting__c/fields/No_Gas__c.field-meta.xml
<CustomField>
    <fullName>No_Gas__c</fullName>
    <defaultValue>true</defaultValue>
    <label>No Gas</label>
    <type>Checkbox</type>
</CustomField>