force-app/main/default/objects/Letting__c/fields/Notice_Received__c.field-meta.xml
<CustomField>
    <fullName>Notice_Received__c</fullName>
    <label>Notice Received</label>
    <type>Date</type>
</CustomField>