force-app/main/default/objects/Letting__c/fields/Offer_BT_Household_Name__c.field-meta.xml
<CustomField>
    <fullName>Offer_BT_Household_Name__c</fullName>
    <formula>Offer__r.BT_Household_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer BT Household Name</label>
    <type>Text</type>
</CustomField>