force-app/main/default/objects/Letting__c/fields/Original_end__c.field-meta.xml
<CustomField>
    <fullName>Original_end__c</fullName>
    <inlineHelpText>Enter if  tenancy terminates before arranged end date</inlineHelpText>
    <label>Original end</label>
    <type>Date</type>
</CustomField>