force-app/main/default/objects/Letting__c/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <label>Payment Reference</label>
    <type>TextArea</type>
</CustomField>