force-app/main/default/objects/Letting__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>pba__Listing__c</referenceTo>
    <relationshipLabel>Lettings (Property)</relationshipLabel>
    <relationshipName>Lettings1</relationshipName>
    <type>Lookup</type>
</CustomField>