force-app/main/default/objects/Letting__c/fields/PV_SL_Household_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>PV_SL_Household_Last_Name__c</fullName>
    <formula>Listing__r.Property_Valuation__r.Household_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PV SL Household Last Name</label>
    <type>Text</type>
</CustomField>