force-app/main/default/objects/Letting__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tenant breached contract terms</fullName>
            </value>
            <value>
                <fullName>Tenant buying</fullName>
            </value>
            <value>
                <fullName>Tenant deceased</fullName>
            </value>
            <value>
                <fullName>Tenant dissatisfied with property</fullName>
            </value>
            <value>
                <fullName>Tenant dissatisfied with service</fullName>
            </value>
            <value>
                <fullName>Tenant downsizing</fullName>
            </value>
            <value>
                <fullName>Tenant relocating</fullName>
            </value>
            <value>
                <fullName>Tenant upsizing</fullName>
            </value>
            <value>
                <fullName>Landlord bankrupt</fullName>
            </value>
            <value>
                <fullName>Landlord breached contract terms</fullName>
            </value>
            <value>
                <fullName>Landlord deceased</fullName>
            </value>
            <value>
                <fullName>Landlord dissatisfied with tenant</fullName>
            </value>
            <value>
                <fullName>Landlord moving back in</fullName>
            </value>
            <value>
                <fullName>Landlord owed rent</fullName>
            </value>
            <value>
                <fullName>Landlord refurbishing</fullName>
            </value>
            <value>
                <fullName>Landlord selling</fullName>
            </value>
            <value>
                <fullName>Landlord served notice of abandonment</fullName>
            </value>
            <value>
                <fullName>Landlord wants more rent</fullName>
            </value>
            <value>
                <fullName>End of term</fullName>
            </value>
            <value>
                <fullName>Renewal terms not agreed</fullName>
            </value>
            <value>
                <fullName>Tenant/Landlord dispute</fullName>
            </value>
            <value>
                <fullName>Reason unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>