force-app/main/default/objects/Letting__c/fields/Redecoration__c.field-meta.xml
<CustomField>
    <fullName>Redecoration__c</fullName>
    <label>Redecoration Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>