force-app/main/default/objects/Letting__c/fields/Rent_Collection_Fee__c.field-meta.xml
<CustomField>
    <fullName>Rent_Collection_Fee__c</fullName>
    <label>Rent Collection Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>