force-app/main/default/objects/Letting__c/fields/Rent_Collection_Fee_Convert__c.field-meta.xml
<CustomField>
    <fullName>Rent_Collection_Fee_Convert__c</fullName>
    <label>Rent Collection Fee Convert</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Changed to Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Changed to Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>