force-app/main/default/objects/Letting__c/fields/Rent_instalments_start__c.field-meta.xml
<CustomField>
    <fullName>Rent_instalments_start__c</fullName>
    <label>Rent instalments start</label>
    <type>Date</type>
</CustomField>