force-app/main/default/objects/Letting__c/fields/Rent_invoiced_up_to__c.field-meta.xml
<CustomField>
    <fullName>Rent_invoiced_up_to__c</fullName>
    <label>Rent invoiced up to</label>
    <type>Date</type>
</CustomField>