force-app/main/default/objects/Letting__c/fields/Secondary__c.field-meta.xml
<CustomField>
    <fullName>Secondary__c</fullName>
    <formula>TEXT(Secondary_Buyer_Tenant__r.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Buyer / Tenant Salutation</label>
    <type>Text</type>
</CustomField>