force-app/main/default/objects/Letting__c/fields/Secondary_Buyer_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Buyer_Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Tenant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lettings (Secondary Buyer / Tenant)</relationshipLabel>
    <relationshipName>Lettings</relationshipName>
    <type>Lookup</type>
</CustomField>