force-app/main/default/objects/Letting__c/fields/Secondary_Seller_Landlord1__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Seller_Landlord1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Landlord</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lettings (Secondary Seller / Landlord)</relationshipLabel>
    <relationshipName>Lettings4</relationshipName>
    <type>Lookup</type>
</CustomField>