force-app/main/default/objects/Letting__c/fields/Secondary_Seller_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Seller_Landlord__c</fullName>
    <formula>Listing__r.Property_Valuation__r.Secondary_Property_Owner__r.FirstName + &quot; &quot; + Listing__r.Property_Valuation__r.Secondary_Property_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Seller / Landlord</label>
    <type>Text</type>
</CustomField>