force-app/main/default/objects/Letting__c/fields/Secondary_Tenant_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Tenant_Email_Address__c</fullName>
    <label>Secondary Tenant Email Address</label>
    <type>Email</type>
</CustomField>