force-app/main/default/objects/Letting__c/fields/Secondary_Tenant_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Tenant_Mobile__c</fullName>
    <label>Secondary Tenant Mobile</label>
    <type>Phone</type>
</CustomField>