force-app/main/default/objects/Letting__c/fields/Send_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoices__c</fullName>
    <label>Send Invoices</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Not Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>