force-app/main/default/objects/Letting__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tenancy current</fullName>
                <default>true</default>
                <label>Tenancy current</label>
            </value>
            <value>
                <fullName>Tenancy Finished</fullName>
            </value>
            <value>
                <fullName>Tenancy cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>