force-app/main/default/objects/Letting__c/fields/Target_Float__c.field-meta.xml
<CustomField>
    <fullName>Target_Float__c</fullName>
    <label>Target Float Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>