force-app/main/default/objects/Letting__c/fields/Ten_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Ten_Start_Date__c</fullName>
    <formula>TEXT(DAY(Tenancy_Start_Date__c)) &amp; &quot;-&quot; &amp; TEXT(MONTH(Tenancy_Start_Date__c)) &amp; &quot;-&quot; &amp; TEXT(YEAR(Tenancy_Start_Date__c))</formula>
    <label>Ten Start Date</label>
    <type>Text</type>
</CustomField>