force-app/main/default/objects/Letting__c/fields/Tenancy_Break_Clause__c.field-meta.xml
<CustomField>
    <fullName>Tenancy_Break_Clause__c</fullName>
    <label>Tenancy Break Clause</label>
    <type>Date</type>
</CustomField>