force-app/main/default/objects/Letting__c/fields/Tenancy_current_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Tenancy_current_Date_and_Time__c</fullName>
    <label>Tenancy current Date and Time</label>
    <type>DateTime</type>
</CustomField>