force-app/main/default/objects/Letting__c/fields/Tenancy_end_Date__c.field-meta.xml
<CustomField>
    <fullName>Tenancy_end_Date__c</fullName>
    <label>Tenancy End Date</label>
    <type>Date</type>
</CustomField>