force-app/main/default/objects/Letting__c/fields/Tenancy_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Tenancy_Start_Date__c</fullName>
    <label>Tenancy Start Date</label>
    <type>Date</type>
</CustomField>