force-app/main/default/objects/Letting__c/fields/Tenant_Address__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Address__c</fullName>
    <formula>Main_Tenant__r.MailingStreet &amp;&quot;, &quot;&amp; Main_Tenant__r.MailingCity &amp;&quot;, &quot;&amp;Main_Tenant__r.MailingState&amp;&quot;, &quot;&amp; Main_Tenant__r.MailingCountry&amp;&quot;, &quot;&amp;Main_Tenant__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant Address</label>
    <type>Text</type>
</CustomField>