force-app/main/default/objects/Letting__c/fields/Tenant_Last_name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Last_name__c</fullName>
    <formula>Main_Tenant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant Last name</label>
    <type>Text</type>
</CustomField>