force-app/main/default/objects/Letting__c/fields/Tenant_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Salutation__c</fullName>
    <formula>TEXT(Main_Tenant__r.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant Salutation</label>
    <type>Text</type>
</CustomField>