force-app/main/default/objects/Letting__c/fields/Tidying_Garden__c.field-meta.xml
<CustomField>
    <fullName>Tidying_Garden__c</fullName>
    <label>Tidying Garden Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>